# bydleni_rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: data-pipeline.md  frontend.md  overview.md  server.md
docs/src/data-sources/: cnb.md  czso.md  fred.md  sreality.md
docs/src/development/: deployment.md  setup.md  testing.md
docs/src/features/: affordability.md  calculators.md  forecasts.md  methodology.md  scenario-mode.md
migrations/: 001_init.sql  002_phase3.sql  003_fix_listings.sql
src/: config.rs  db.rs  main.rs
src/compute/: affordability.rs  aggregation.rs  czech_tax.rs  forecast.rs  historical.rs  mod.rs  scenario.rs  stories.rs
src/fetchers/: cnb.rs  czso.rs  fred.rs  freshness.rs  mod.rs  sreality.rs
src/models/: affordability.rs  listing.rs  mod.rs  time_series.rs
src/server/: error.rs  htmx.rs  methodology.rs  mod.rs  scheduler.rs  templates.rs
src/server/api/: charts.rs  forecast.rs  htmx_handlers.rs  mod.rs  scenario.rs  status.rs
src/server/routes/: compare.rs  index.rs  mod.rs  region.rs  stories.rs
static/: charts.js  scenario.js  style.css
templates/: base.html  index.html
templates/pages/: compare.html  not_found.html  region.html  stories.html
templates/partials/: metric_card.html
